--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"devDependencies": {
 		"@sveltejs/kit": "next",
 		"@types/cookie": "^0.4.1",
+		"@types/marked": "^4.0.0",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
 		"eslint": "^7.32.0",
@@ -35,7 +36,6 @@
 		"@sveltejs/adapter-static": "^1.0.0-next.21",
 		"cookie": "^0.4.1",
 		"htmlparser2": "^7.2.0",
-		"marked": "^4.0.3",
-		"svelte-markdown": "^0.1.14"
+		"marked": "^4.0.3"
 	}
 }
