--- a/package.json
+++ b/package.json
@@ -31,11 +31,10 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource/fira-mono": "^4.5.0",
 		"@lukeed/uuid": "^2.0.0",
 		"@sveltejs/adapter-static": "^1.0.0-next.21",
 		"cookie": "^0.4.1",
-		"htmlparser2": "^7.2.0",
+		"html-minifier": "^4.0.0",
 		"marked": "^4.0.3"
 	}
 }
