--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	"type": "module",
 	"dependencies": {
 		"@lukeed/uuid": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.0.0-next.0",
 		"@sveltejs/adapter-static": "^1.0.0-next.21",
 		"@types/js-yaml": "^4.0.4",
 		"cookie": "^0.4.1",
