--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "^1.0.0-next.306",
 		"@types/cookie": "^0.4.1",
 		"@types/html-minifier": "^4.0.1",
 		"@types/marked": "^4.0.0",
