start switching to markdown-it

--- a/package.json
+++ b/package.json
@@ -36,10 +36,11 @@
 		"@sveltejs/adapter-node": "^1.0.0-next.0",
 		"@sveltejs/adapter-static": "^1.0.0-next.21",
 		"@types/js-yaml": "^4.0.4",
+		"@types/markdown-it": "^12.2.3",
 		"cookie": "^0.4.1",
 		"html-minifier": "^4.0.0",
 		"js-yaml": "^4.1.0",
-		"marked": "^4.0.3"
+		"markdown-it": "^12.3.2"
 	},
 	"engines": {
 		"node": ">=16"
