--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"mdsvex": "^0.10.6",
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
 		"svelte": "^3.48.0",
@@ -37,9 +38,7 @@
 		"@sveltejs/adapter-static": "^1.0.0-next.21",
 		"@types/js-yaml": "^4.0.4",
 		"cookie": "^0.4.1",
-		"html-minifier": "^4.0.0",
-		"js-yaml": "^4.1.0",
-		"marked": "^4.0.3"
+		"html-minifier": "^4.0.0"
 	},
 	"engines": {
 		"node": ">=16"
