--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"mdsvex": "^0.10.6",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.50.0",
+		"svelte": "3.49.0",
 		"svelte-check": "^2.9.0",
 		"svelte-preprocess": "^4.10.7",
 		"tslib": "^2.4.0",
@@ -36,7 +36,7 @@
 		"@lukeed/uuid": "^2.0.0",
 		"@sveltejs/adapter-node": "^1.0.0-next.88",
 		"@sveltejs/adapter-static": "^1.0.0-next.41",
-		"@sveltejs/kit": "^1.0.0-next.468",
+		"@sveltejs/kit": "^1.0.0-next.436",
 		"@types/js-yaml": "^4.0.4",
 		"cookie": "^0.5.0",
 		"html-minifier": "^4.0.0",
