--- a/package.json
+++ b/package.json
@@ -3,42 +3,46 @@
 	"version": "0.0.1",
 	"license": "MIT",
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"dev:host": "svelte-kit dev --host",
-		"build": "svelte-kit build",
-		"preview": "svelte-kit preview",
+		"dev": "vite dev",
+		"dev:host": "vite dev --host",
+		"build": "vite build",
+		"preview": "vite preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"postinstall": "patch-package"
 	},
 	"devDependencies": {
-		"@sveltejs/kit": "^1.0.0-next.350",
-		"@types/cookie": "^0.4.1",
+		"@types/cookie": "^0.5.1",
 		"@types/html-minifier": "^4.0.1",
-		"@types/marked": "^4.0.0",
-		"@typescript-eslint/eslint-plugin": "^4.31.1",
-		"@typescript-eslint/parser": "^4.31.1",
-		"eslint": "^7.32.0",
+		"@types/marked": "^4.0.6",
+		"@typescript-eslint/eslint-plugin": "^5.36.1",
+		"@typescript-eslint/parser": "^5.36.1",
+		"eslint": "^8.23.0",
 		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^3.2.1",
+		"eslint-plugin-svelte3": "^4.0.0",
 		"mdsvex": "^0.10.6",
-		"prettier": "^2.4.1",
-		"prettier-plugin-svelte": "^2.4.0",
-		"svelte": "^3.48.0",
-		"svelte-check": "^2.2.6",
-		"svelte-preprocess": "^4.9.4",
-		"tslib": "^2.3.1",
-		"typescript": "^4.4.3"
+		"prettier": "^2.7.1",
+		"prettier-plugin-svelte": "^2.7.0",
+		"svelte": "3.49.0",
+		"svelte-check": "^2.9.0",
+		"svelte-preprocess": "^4.10.7",
+		"tslib": "^2.4.0",
+		"typescript": "^4.8.2"
 	},
 	"type": "module",
 	"dependencies": {
 		"@lukeed/uuid": "^2.0.0",
-		"@sveltejs/adapter-node": "^1.0.0-next.0",
-		"@sveltejs/adapter-static": "^1.0.0-next.21",
+		"@sveltejs/adapter-node": "^1.0.0-next.88",
+		"@sveltejs/adapter-static": "^1.0.0-next.41",
+		"@sveltejs/kit": "^1.0.0-next.436",
 		"@types/js-yaml": "^4.0.4",
-		"cookie": "^0.4.1",
-		"html-minifier": "^4.0.0"
+		"cookie": "^0.5.0",
+		"html-minifier": "^4.0.0",
+		"patch-package": "^6.4.7",
+		"postinstall-postinstall": "^2.1.0",
+		"vite": "vite@^3.1.0-beta.1"
 	},
 	"engines": {
 		"node": ">=16"
