--- a/package.json
+++ b/package.json
@@ -25,24 +25,24 @@
 		"mdsvex": "^0.10.6",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "3.49.0",
-		"svelte-check": "^2.9.0",
-		"svelte-preprocess": "^4.10.7",
+		"svelte": "3.58.0",
+		"svelte-check": "^3.2.0",
+		"svelte-preprocess": "^5.0.3",
 		"tslib": "^2.4.0",
-		"typescript": "^4.8.2"
+		"typescript": "^5.0.4"
 	},
 	"type": "module",
 	"dependencies": {
 		"@lukeed/uuid": "^2.0.0",
-		"@sveltejs/adapter-node": "^1.0.0-next.88",
-		"@sveltejs/adapter-static": "^1.0.0-next.41",
-		"@sveltejs/kit": "^1.0.0-next.436",
+		"@sveltejs/adapter-node": "1.2.3",
+		"@sveltejs/adapter-static": "^2.0.1",
+		"@sveltejs/kit": "1.15.2",
 		"@types/js-yaml": "^4.0.4",
 		"cookie": "^0.5.0",
 		"html-minifier": "^4.0.0",
 		"patch-package": "^6.4.7",
 		"postinstall-postinstall": "^2.1.0",
-		"vite": "vite@^3.1.0-beta.1"
+		"vite": "^4.2.1"
 	},
 	"engines": {
 		"node": ">=16"
