--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
 		"html-minifier": "^4.0.0",
 		"patch-package": "^6.4.7",
 		"postinstall-postinstall": "^2.1.0",
-		"vite": "4.1.4"
+		"vite": "4.3.0-beta.3"
 	},
 	"engines": {
 		"node": ">=16"
