--- a/src/routes/_projects.json
+++ b/src/routes/_projects.json
@@ -4,7 +4,7 @@
 		"href": "https://packet.matdoes.dev",
 		"source": "https://github.com/mat-1/minecraft-packet-debugger",
 		"languages": ["typescript", "svelte"],
-		"description": "Website for conveniently decoding Minecraft protocol packets"
+		"description": "Conveniently inspect Minecraft protocol packets."
 	},
 	{
 		"name": "Azalea",
