--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
 		"html-minifier": "^4.0.0",
 		"patch-package": "^8.0.0",
 		"postinstall-postinstall": "^2.1.0",
-		"vite": "4.5.0"
+		"vite": "4.5.0",
+		"vite-imagetools": "^6.2.5"
 	},
 	"engines": {
 		"node": ">=16"
