--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
 		"html-minifier": "^4.0.0",
 		"patch-package": "^8.0.0",
 		"postinstall-postinstall": "^2.1.0",
-		"vite": "5.0.2",
-		"vite-imagetools": "^6.2.5"
+		"vite": "5.0.2"
 	},
 	"engines": {
 		"node": ">=16"
