--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"mdsvex": "^0.11.0",
 		"prettier": "^3.1.0",
 		"prettier-plugin-svelte": "^3.1.2",
+		"sharp": "^0.33.0",
 		"svelte": "4.2.8",
 		"svelte-check": "^3.6.2",
 		"svelte-preprocess": "^5.1.1",
