--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"postinstall": "patch-package"
 	},
 	"devDependencies": {
+		"@img/sharp-linux-x64": "^0.33.0",
 		"@types/cookie": "^0.6.0",
 		"@types/html-minifier": "^4.0.5",
 		"@typescript-eslint/eslint-plugin": "^6.13.2",
