--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"html-minifier": "^4.0.0",
 		"patch-package": "^8.0.0",
 		"postinstall-postinstall": "^2.1.0",
+		"svelte-body": "^1.4.0",
 		"vite": "5.0.6"
 	},
 	"engines": {
