--- a/package.json
+++ b/package.json
@@ -14,37 +14,38 @@
 		"postinstall": "patch-package"
 	},
 	"devDependencies": {
-		"@img/sharp-linux-x64": "^0.33.0",
+		"@img/sharp-linux-x64": "^0.33.1",
+		"@sveltejs/vite-plugin-svelte": "^3.0.1",
 		"@types/cookie": "^0.6.0",
 		"@types/html-minifier": "^4.0.5",
-		"@typescript-eslint/eslint-plugin": "^6.13.2",
-		"@typescript-eslint/parser": "^6.13.2",
-		"eslint": "^8.55.0",
+		"@typescript-eslint/eslint-plugin": "^6.18.1",
+		"@typescript-eslint/parser": "^6.18.1",
+		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"mdsvex": "^0.11.0",
-		"prettier": "^3.1.0",
+		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
-		"sharp": "^0.33.0",
+		"sharp": "^0.33.1",
 		"svelte": "4.2.8",
 		"svelte-check": "^3.6.2",
-		"svelte-preprocess": "^5.1.1",
+		"svelte-preprocess": "^5.1.3",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"@lukeed/uuid": "^2.0.1",
-		"@sveltejs/adapter-node": "1.3.1",
-		"@sveltejs/adapter-static": "^2.0.3",
-		"@sveltejs/kit": "1.27.7",
+		"@sveltejs/adapter-node": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.1",
+		"@sveltejs/kit": "^2.3.0",
 		"@types/js-yaml": "^4.0.9",
-		"cbor-x": "^1.5.6",
+		"cbor-x": "^1.5.7",
 		"cookie": "^0.6.0",
 		"html-minifier": "^4.0.0",
 		"patch-package": "^8.0.0",
 		"postinstall-postinstall": "^2.1.0",
 		"svelte-body": "^1.4.0",
-		"vite": "5.0.6"
+		"vite": "5.0.11"
 	},
 	"engines": {
 		"node": ">=16"
