--- a/package.json
+++ b/package.json
@@ -14,38 +14,40 @@
 		"postinstall": "patch-package"
 	},
 	"devDependencies": {
-		"@img/sharp-linux-x64": "^0.33.2",
+		"@img/sharp-linux-x64": "^0.33.3",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@types/cookie": "^0.6.0",
 		"@types/html-minifier": "^4.0.5",
-		"@typescript-eslint/eslint-plugin": "^7.3.1",
-		"@typescript-eslint/parser": "^7.3.1",
-		"eslint": "^8.57.0",
+		"@types/matter-js": "^0.19.6",
+		"@typescript-eslint/eslint-plugin": "^7.6.0",
+		"@typescript-eslint/parser": "^7.6.0",
+		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"mdsvex": "^0.11.0",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.2",
-		"sharp": "^0.33.2",
+		"sharp": "^0.33.3",
 		"svelte": "4.2.12",
-		"svelte-check": "^3.6.7",
+		"svelte-check": "^3.6.9",
 		"svelte-preprocess": "^5.1.3",
 		"tslib": "^2.6.2",
-		"typescript": "^5.4.2"
+		"typescript": "^5.4.4"
 	},
 	"type": "module",
 	"dependencies": {
 		"@lukeed/uuid": "^2.0.1",
 		"@sveltejs/adapter-node": "^5.0.1",
 		"@sveltejs/adapter-static": "^3.0.1",
-		"@sveltejs/kit": "^2.5.4",
+		"@sveltejs/kit": "^2.5.5",
 		"@types/js-yaml": "^4.0.9",
-		"cbor-x": "^1.5.8",
+		"cbor-x": "^1.5.9",
 		"cookie": "^0.6.0",
 		"html-minifier": "^4.0.0",
+		"matter-js": "^0.19.0",
 		"patch-package": "^8.0.0",
 		"postinstall-postinstall": "^2.1.0",
 		"svelte-body": "^1.4.0",
-		"vite": "5.1.6"
+		"vite": "5.2.8"
 	},
 	"engines": {
 		"node": ">=16"
