--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"postinstall": "patch-package"
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
 		"@img/sharp-linux-x64": "^0.33.3",
@@ -23,7 +22,7 @@
 		"@typescript-eslint/parser": "^7.6.0",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
-		"mdsvex": "^0.11.0",
+		"mdsvex": "patch:mdsvex@npm%3A0.11.2#~/.yarn/patches/mdsvex-npm-0.11.2-d4006d9b92.patch",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.3",
 		"sharp": "^0.33.3",
@@ -44,7 +43,6 @@
 		"cookie": "^0.6.0",
 		"html-minifier": "^4.0.0",
 		"matter-js": "^0.19.0",
-		"patch-package": "^8.0.0",
 		"postinstall-postinstall": "^2.1.0",
 		"svelte-body": "^1.4.0",
 		"vite": "5.2.8"
