--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@types/cookie": "^0.6.0",
 		"@types/html-minifier": "^4.0.5",
 		"@types/matter-js": "^0.19.6",
+		"@types/turndown": "^5.0.4",
 		"@typescript-eslint/eslint-plugin": "^7.6.0",
 		"@typescript-eslint/parser": "^7.6.0",
 		"eslint": "^9.0.0",
@@ -45,6 +46,7 @@
 		"matter-js": "^0.19.0",
 		"postinstall-postinstall": "^2.1.0",
 		"svelte-body": "^1.4.0",
+		"turndown": "^7.2.0",
 		"vite": "5.2.8"
 	},
 	"engines": {
